# audiobench

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
cli/: repl.py
docs/: ARCHITECTURE.md  USAGE.md  index.md
src/audiobench/: __init__.py  __main__.py
src/audiobench/chat/: __init__.py  chat_session.py  chat_store.py  compare.py  context_builder.py
src/audiobench/chat/providers/: __init__.py  ollama_provider.py
src/audiobench/cli/: __init__.py  app.py
src/audiobench/cli/commands/: __init__.py  analyze.py  audio.py  bookmark.py  chat.py  config_cmd.py  history.py  inspect.py  listen.py  play.py  speak.py  summarize.py  system.py  transcribe.py
src/audiobench/cli/display/: __init__.py  phase_tracker.py  theme.py
src/audiobench/cli/io/: __init__.py  file_collector.py  output_resolver.py
src/audiobench/cli/plugins/: __init__.py  custom_group.py  loader.py
src/audiobench/cli/repl/: __init__.py  banner.py  completion.py  dispatch.py  dot_commands.py  session.py  slash_commands.py
src/audiobench/core/: __init__.py  db_base.py  db_engine.py  db_session.py  error_types.py  logger_factory.py  settings.py
src/audiobench/diarization/: __init__.py  engine.py
src/audiobench/output/: base.py  json_fmt.py  srt.py  text.py  vtt.py
src/audiobench/playback/: __init__.py
src/audiobench/storage/: bookmark_repository.py  models.py  repository.py
src/audiobench/storage/migrations/: m002_db_hardening.py  m003_fix_segments_fk.py  m004_ai_features.py  m005_bookmarks.py
src/audiobench/streaming/: __init__.py  session.py
src/audiobench/transcribe/: __init__.py  audio_converter.py  audio_filters.py  refiner.py  transcriber.py  transcription_result.py
src/audiobench/transcribe/engines/: __init__.py  engine_protocol.py  engine_registry.py  gemini_engine.py  whisper_engine.py
src/audiobench/tts/: engine.py
tests/: conftest.py
tests/test_cli/: __init__.py  test_commands.py  test_io.py  test_repl.py
tests/test_core/: __init__.py  test_db_engine.py  test_settings.py
tests/test_storage/: __init__.py  test_repository.py
